# python-template

./: .eslintrc.json  README.md  index.html  package-lock.json  package.json  pyproject.toml
.github/workflows/: main.yml
